Fixed issue with load button not showing

--- a/css/base.css
+++ b/css/base.css
@@ -91,6 +91,7 @@
   background-color: #eeeeee;
   border: 1px solid rgba(0,0,0,0.3);
   font-size: 12px;
+  overflow-x: hidden;
 }
 ._fbw-post-type-link ._fbw-post-link-picture {
   width: 100px;
